test/jxcore/test-unicode.js
// Copyright & License details are available under JXCORE_LICENSE file
// Running jx or native package containing unicode characters in source files raises exception:
// SyntaxError: unterminated string literal

var str = "норм чё";